plugin/src/test/resources/annotator/perl/unreachableCode/ternaryDieCondition.code
die("some") ? "<error descr="Unreachable code">one</error>": "<error descr="Unreachable code">Two</error>";